# potion

./: .gitattributes  .gitignore  Cargo.toml  deny.toml  deploy.sh  doc.cap  potion.code-workspace  types.toml
.cargo/: config.toml
.githooks/: check-bans  check-fmt  pre-commit
assets/: output_log.txt
assets/decomp/: decomp.sh  output_log.txt
assets/models/: TestVHACD  cart.gltf  cauldron.glb  cauldron.gltf  cauldron.mtl  cauldron_decomp.wrl  cauldron_decomp2.mtl  cauldron_decomp_log.txt  cauldron_log.txt  cauldron_stirrer.glb  cauldronmap.glb  cauldronpillar.glb  cauldronwall.glb  cellar.gltf  character.glb  character.gltf  coltest.gltf  crate.glb  crate.mtl  crate_decomp.wrl  crate_decomp_log.txt  crate_lid.blend  crate_lid.gltf  crate_lid.mtl  crate_lid_decomp.wrl  crate_lid_decomp_log.txt  crate_stirrer.mtl  crate_stirrer_decomp.wrl  crate_stirrer_decomp_log.txt  decomp.stl  door.glb  ground.glb  ground.gltf  main  map.gltf  mortar.gltf  placeholder_sphere.glb  potion_coil.glb  potion_flask.glb  potion_normal.glb  (+19 more)
assets/scenes/: fireball.scn.ron  fireball2.scn.ron  frostbolt.scn.ron  frostbolt_target.scn.ron
assets/scenes/gltfs/: t.glb
assets/shaders/: bark_material.wgsl  custom_material.wgsl  edge_detection.wgsl  glowy.wgsl  leaf_material.wgsl  leaf_material2.wgsl  my_material.wgsl  utils.wgsl  vertex_shader.wgsl  water.wgsl
design/: README.md  brewing.md  grabbing.md  storage.md  storyboard.md
examples/: intuitive_twisting.rs  performance.rs  print_keycode.rs  shader_test.rs  shader_test2.rs  test.rs  test_collider_size.rs  tree_shader.rs  twist.rs
issues/: issues.md
src/: attach.rs  cauldron.rs  client.rs  debug.rs  deposit.rs  diagnostics.rs  edge_detection.rs  egui.rs  follow.rs  joint_break.rs  lib.rs  local.rs  physics.rs  player.rs  prelude.rs  previous.rs  server.rs  slot.rs  store.rs  traversal.rs  trees.rs  ui.rs  ui_pieces.rs  vhacd.rs
src/binaries/: client.rs  local.rs  server.rs
src/debug/: mod.rs  physics_mesh.rs  retained_gizmos.rs  texture.rs
src/maps/: base_test.rs  colliders.rs  effects.rs  mod.rs  puzzle.rs  showcase.rs
src/network/: mod.rs  ui.rs
src/objects/: cauldron.rs  mod.rs  potion.rs  store.rs  thrown.rs  trees.rs
src/objects/effects/: mod.rs  vine.rs
src/physics/: contact_filter.rs  context_ext.rs  joint_break.rs  joint_interpolation.rs  mod.rs  muscle.rs  muscle_slot.rs  slot.rs  split_compound.rs
src/player/: controller.rs  grab.rs  input.rs  inventory.rs  mod.rs  spawn.rs  wanderlust.rs
