[package]
default-run = "local"
edition = "2021"
name = "potion"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9"
bevy_egui = "0.17"
sabi = { path = "../sabi/sabi", features = ["public"] }
#sabi = { git = "https://github.com/aceeri/sabi", features = ["public"] }
serde = { version = "1.0", features = ["derive"] }
springy = { git = "https://github.com/aceeri/springy", features = ["rapier3d"] }

#bevy_embedded_assets = "0.6"
#bevy_fly_camera = { git = "https://github.com/Aceeri/bevy_fly_camera", branch = "bevy-0.8" }
#bevy_mod_outline = { git = "https://github.com/komadori/bevy_mod_outline", rev = "4627eaa093e0bc0f292ca19e5af631507840d313" }
bevy_mod_outline = "0.3"
#bevy_mod_wanderlust = {git = "https://github.com/aceeri/bevy_mod_wanderlust"}
bevy_mod_wanderlust = { path = "../bevy_mod_wanderlust", features = [
    "debug_lines",
] }

bevy-inspector-egui = "0.14"
bevy-inspector-egui-rapier = { version = "0.8", features = ["rapier3d"] }
#bevy_editor_pls = "0.1"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy_framepace = "0.9"
bevy_mod_inverse_kinematics = "0.2"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy_rapier3d = { version = "0.19", features = ["serde-serialize"] }
bincode = "1.3"
bitflags = "1.3"
derive_more = "0.99"
egui = "0.19"
fixed = { version = "1.11", features = ["serde", "std", "serde-str"] }
fxhash = "0.2"
#igd = "0.12"
iyes_loopless = { version = "0.9", features = ["states"] }
lazy_static = "1.4"
leafwing-input-manager = "0.7"
#my_internet_ip = "0.1"
num-traits = "0.2"
rand = "0.8"
ron = "0.8"
vec-collections = "0.4"
wgpu-types = "0.14"

#bevy_renet = "0.0.5"
bevy_renet = { git = "https://github.com/lucaspoffo/renet" }
obj = "0.10.2"
#renet_visualizer = "0.0.2"
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", features = [
    "bevy",
] }

[patch.crates-io]
#rechannel = { git = "https://github.com/lucaspoffo/renet" }
#renet = { git = "https://github.com/lucaspoffo/renet" }
#renetcode = { git = "https://github.com/lucaspoffo/renet" }
#bevy_rapier3d = {git = "https://github.com/dimforge/bevy_rapier", rev = "4013d7d"}
#parry3d = {path = "../parry/crates/parry3d"}
#bevy-inspector-egui = {path = "../bevy-inspector-egui"}
#bevy_mod_wanderlust = {path = "../bevy_mod_wanderlust"}
#parry3d = {git = "https://github.com/aceeri/parry"}
#bevy_mod_wanderlust = {git = "https://github.com/aceeri/bevy_mod_wanderlust"}
bevy-inspector-egui-rapier = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }

bevy = {git = "https://github.com/aceeri/bevy"}
bevy_animation = {git = "https://github.com/aceeri/bevy"}
bevy_app = {git = "https://github.com/aceeri/bevy"}
bevy_asset = {git = "https://github.com/aceeri/bevy"}
bevy_audio = {git = "https://github.com/aceeri/bevy"}
bevy_core = {git = "https://github.com/aceeri/bevy"}
bevy_core_pipeline = {git = "https://github.com/aceeri/bevy"}
bevy_derive = {git = "https://github.com/aceeri/bevy"}
bevy_diagnostic = {git = "https://github.com/aceeri/bevy"}
#bevy_dylib = {git = "https://github.com/aceeri/bevy"}
#bevy_dynamic_plugin = {git = "https://github.com/aceeri/bevy"}
bevy_ecs = {git = "https://github.com/aceeri/bevy"}
#bevy_ecs_compile_fail_tests = {git = "https://github.com/aceeri/bevy"}
bevy_encase_derive = {git = "https://github.com/aceeri/bevy"}
bevy_gilrs = {git = "https://github.com/aceeri/bevy"}
bevy_gltf = {git = "https://github.com/aceeri/bevy"}
bevy_hierarchy = {git = "https://github.com/aceeri/bevy"}
bevy_input = {git = "https://github.com/aceeri/bevy"}
bevy_internal = {git = "https://github.com/aceeri/bevy"}
bevy_log = {git = "https://github.com/aceeri/bevy"}
bevy_macro_utils = {git = "https://github.com/aceeri/bevy"}
bevy_math = {git = "https://github.com/aceeri/bevy"}
bevy_mikktspace = {git = "https://github.com/aceeri/bevy"}
bevy_pbr = {git = "https://github.com/aceeri/bevy"}
bevy_ptr = {git = "https://github.com/aceeri/bevy"}
bevy_reflect = {git = "https://github.com/aceeri/bevy"}
bevy_render = {git = "https://github.com/aceeri/bevy"}
bevy_scene = {git = "https://github.com/aceeri/bevy"}
bevy_sprite = {git = "https://github.com/aceeri/bevy"}
bevy_tasks = {git = "https://github.com/aceeri/bevy"}
bevy_text = {git = "https://github.com/aceeri/bevy"}
bevy_time = {git = "https://github.com/aceeri/bevy"}
bevy_transform = {git = "https://github.com/aceeri/bevy"}
bevy_ui = {git = "https://github.com/aceeri/bevy"}
bevy_utils = {git = "https://github.com/aceeri/bevy"}
bevy_window = {git = "https://github.com/aceeri/bevy"}
bevy_winit = {git = "https://github.com/aceeri/bevy"}

[[bin]]
name = "local"
path = "src/local.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tree"
path = "examples/tree_shader.rs"
