[package]
default-run = "local"
edition = "2021"
name = "potion"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10"
bevy_egui = "0.20"
#sabi = { path = "../sabi/sabi", features = ["public"] }
#sabi = {git = "https://github.com/aceeri/sabi", features = ["public"]}
serde = {version = "1.0", features = ["derive"]}
springy = {git = "https://github.com/aceeri/springy", features = ["rapier3d"]}
#springy = {path = "../springy", features = ["rapier3d"]}

#bevy_mod_wanderlust = {git = "https://github.com/PROMETHIA-27/bevy_mod_wanderlust"}
bevy_mod_wanderlust = { path = "../bevy_mod_wanderlust"}
#bevy_mod_edge_detection = {path = "../bevy_mod_edge_detection"}
bevy_mod_edge_detection = {git = "https://github.com/Aceeri/bevy_mod_edge_detection"}

bevy-inspector-egui = "0.18"
bevy_editor_pls = "0.4"
#bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bevy_framepace = "0.12"
bevy_mod_inverse_kinematics = "0.3"
bevy_rapier3d = {version = "0.21", features = ["serde-serialize"]}
#bevy_rapier3d = {path = "../bevy_rapier/bevy_rapier3d"}
bincode = "1.3"
bitflags = "1.3"
derive_more = "0.99"
egui = "0.21"
leafwing-input-manager = "0.9"
wgpu-types = "0.15"
#bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" } 
aery = "0.2.0"
 
bevy_prototype_debug_lines = {version = "0.10", features = ["3d"]}
bevy_mod_component_mirror = "0.9"
bevy_renet = {git = "https://github.com/lucaspoffo/renet"}
obj = "0.10.2"

[patch."https://github.com/jakobhellermann/bevy_editor_pls"]
#bevy_editor_pls = {path = "../bevy_editor_pls/crates/bevy_editor_pls"}
#bevy_editor_pls_default_windows = { path = "../bevy_editor_pls/crates/bevy_editor_pls_default_windows" }
#bevy_editor_pls_core = {path = "../bevy_editor_pls/crates/bevy_editor_pls_core"}
#bevy_editor_pls = {git = "https://github.com/aceeri/bevy_editor_pls", branch = "viewport"}
#bevy_editor_pls_default_windows = {git = "https://github.com/aceeri/bevy_editor_pls", branch = "viewport"}
#bevy_editor_pls_core = {git = "https://github.com/aceeri/bevy_editor_pls", branch = "viewport"}

[patch."https://github.com/aevyrie/bevy_mod_raycast"]
#bevy_mod_raycast = { path = "../bevy_mod_raycast" }

[patch."https://github.com/aevyrie/bevy_mod_picking"]
#bevy_mod_picking = { path = "../bevy_mod_picking" }
#bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "beta"}

[patch."https://github.com/aevyrie/bevy_framepace"]
#bevy_framepace = { path = "../bevy_framepace" }

[patch."https://github.com/PROMETHIA-27/bevy_mod_wanderlust"]
#bevy_mod_wanderlust = {path = "../bevy_mod_wanderlust"}

[patch.crates-io]
#egui = { path = "../egui/crates/egui" }
#egui_dock = { path = "../egui_dock" }
#bevy_framepace = { path = "../bevy_framepace" }
#rechannel = { git = "https://github.com/lucaspoffo/renet" }
#renet = { git = "https://github.com/lucaspoffo/renet" }
#renetcode = { git = "https://github.com/lucaspoffo/renet" }
bevy_rapier3d = {git = "https://github.com/dimforge/bevy_rapier", rev = "38e1b79169303c47d639d64558b7d9adeed99211"}
#bevy_rapier3d = {path = "../bevy_rapier/bevy_rapier3d"}
#parry3d = {path = "../parry/crates/parry3d"}
#bevy-inspector-egui = {path = "../bevy-inspector-egui"}
#bevy_mod_wanderlust = {path = "../bevy_mod_wanderlust"}
#parry3d = {git = "https://github.com/aceeri/parry"}
#bevy_mod_wanderlust = {git = "https://github.com/aceeri/bevy_mod_wanderlust"}
#bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
#bevy_mod_raycast = { path = "../bevy_mod_raycast" }
#

# Replacing the entirety of bevy
#bevy = {git = "https://github.com/bevyengine/bevy"}
#bevy_animation = {git = "https://github.com/bevyengine/bevy"}
#bevy_app = {git = "https://github.com/bevyengine/bevy"}
#bevy_asset = {git = "https://github.com/bevyengine/bevy"}
#bevy_audio = {git = "https://github.com/bevyengine/bevy"}
#bevy_core = {git = "https://github.com/bevyengine/bevy"}
#bevy_core_pipeline = {git = "https://github.com/bevyengine/bevy"}
#bevy_derive = {git = "https://github.com/bevyengine/bevy"}
#bevy_diagnostic = {git = "https://github.com/bevyengine/bevy"}
##bevy_dylib = {git = "https://github.com/bevyengine/bevy"}
##bevy_dynamic_plugin = {git = "https://github.com/bevyengine/bevy"}
#bevy_ecs = {git = "https://github.com/bevyengine/bevy"}
##bevy_ecs_compile_fail_tests = {git = "https://github.com/bevyengine/bevy"}
#bevy_encase_derive = {git = "https://github.com/bevyengine/bevy"}
#bevy_gilrs = {git = "https://github.com/bevyengine/bevy"}
#bevy_gltf = {git = "https://github.com/bevyengine/bevy"}
#bevy_hierarchy = {git = "https://github.com/bevyengine/bevy"}
#bevy_input = {git = "https://github.com/bevyengine/bevy"}
#bevy_internal = {git = "https://github.com/bevyengine/bevy"}
#bevy_log = {git = "https://github.com/bevyengine/bevy"}
#bevy_macro_utils = {git = "https://github.com/bevyengine/bevy"}
#bevy_math = {git = "https://github.com/bevyengine/bevy"}
#bevy_mikktspace = {git = "https://github.com/bevyengine/bevy"}
#bevy_pbr = {git = "https://github.com/bevyengine/bevy"}
#bevy_ptr = {git = "https://github.com/bevyengine/bevy"}
#bevy_reflect = {git = "https://github.com/bevyengine/bevy"}
#bevy_render = {git = "https://github.com/bevyengine/bevy"}
#bevy_scene = {git = "https://github.com/bevyengine/bevy"}
#bevy_sprite = {git = "https://github.com/bevyengine/bevy"}
#bevy_tasks = {git = "https://github.com/bevyengine/bevy"}
#bevy_text = {git = "https://github.com/bevyengine/bevy"}
#bevy_time = {git = "https://github.com/bevyengine/bevy"}
#bevy_transform = {git = "https://github.com/bevyengine/bevy"}
#bevy_ui = {git = "https://github.com/bevyengine/bevy"}
#bevy_utils = {git = "https://github.com/bevyengine/bevy"}
#bevy_window = {git = "https://github.com/bevyengine/bevy"}
#bevy_winit = {git = "https://github.com/bevyengine/bevy"}
#
[[bin]]
name = "local"
path = "src/binaries/local.rs"

[[bin]]
name = "client"
path = "src/binaries/client.rs"

[[bin]]
name = "server"
path = "src/binaries/server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tree"
path = "examples/tree_shader.rs"
